--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     envVars:
       - key: PORT
         value: "8080"
-    disk:
-      sizeGB: 1
-      mountPath: /persistent
-      name: persistent-disk
+    # disk:
+    #   sizeGB: 1
+    #   mountPath: /persistent
+    #   name: persistent-disk
