--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,10 +1,13 @@
 steps:
  # Build the container image
- - name: 'gcr.io/cloud-builders/docker'args: [ 'build', '-t', '${_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_REGISTRY}/${_REPO}:$COMMIT_SHA', '.' ]
+ - name: 'gcr.io/cloud-builders/docker'
+   args: [ 'build', '-t', '${_REGION}-docker.pkg.dev/${_PROJECT_ID}/${_REGISTRY}/${_REPO}:$COMMIT_SHA', '.' ]
  # Push the container image to Container Registry
- - name: 'gcr.io/cloud-builders/docker'args: ['push', '${_REGION}-docker.pkg.dev${_PROJECT_ID}/${_REGISTRY}/${_REPO}:$COMMIT_SHA']
+ - name: 'gcr.io/cloud-builders/docker'
+   args: ['push', '${_REGION}-docker.pkg.dev${_PROJECT_ID}/${_REGISTRY}/${_REPO}:$COMMIT_SHA']
  # Deploy container image to Cloud Run
- - name: 'gcr.io/cloud-builders/gcloud'entrypoint: gcloud
+ - name: 'gcr.io/cloud-builders/gcloud'
+   entrypoint: gcloud
    args:
    - 'run'
    - 'deploy'
